--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^4.2.1",
-    "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "@nuxtjs/i18n": "^10.2.1",
+    "@pinia/nuxt": "^0.11.3",
+    "@vite-pwa/nuxt": "^1.0.7",
+    "formidable": "^3.5.4",
+    "nuxt": "^4.1.3",
+    "pinia": "^3.0.3",
+    "vue": "^3.5.22",
+    "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1",
+    "vite-plugin-bundle-analyzer": "^0.0.1",
+    "vitest": "^4.0.14"
   }
 }
