--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,14 +10,28 @@
   "lang": "fr-FR",
   "icons": [
     {
-      "src": "/public/images/home/icon-192x192.png",
+      "src": "/images/home/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/public/images/home/icon-512x512.png",
+      "src": "/images/home/icon-192x192-maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/images/home/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/images/home/icon-512x512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
